# aumos-observability

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: mkdocs.yml
docs/docs/: index.md  quickstart.md
migrations/versions/: 20240301_0001_obs_anomalies.py
src/aumos_observability/: __init__.py  main.py  settings.py
src/aumos_observability/adapters/: __init__.py  adaptive_sampling.py  alertmanager_client.py  cost_tracking.py  grafana_client.py  kafka.py  langfuse_client.py  loki_client.py  prometheus_client.py  repositories.py  rum_client.py  slo_engine.py  trace_sampling.py
src/aumos_observability/api/: __init__.py  alert_routes.py  dashboard_routes.py  router.py  schemas.py  slo_routes.py
src/aumos_observability/api/routes/: __init__.py  alerting.py  anomaly_routes.py
src/aumos_observability/core/: __init__.py  anomaly_worker.py  interfaces.py  models.py  services.py  slo_engine.py
src/aumos_observability/core/alerting/: __init__.py  correlation_engine.py
src/aumos_observability/core/dashboards/: __init__.py  health_dashboard.py
tests/: conftest.py
tests/unit/: test_correlation_engine.py
